bug scroll bar dissapeared: fixed. now scroll bar is visible

--- a/src/assets/styles/cmps/_root-cmp.scss
+++ b/src/assets/styles/cmps/_root-cmp.scss
@@ -13,7 +13,7 @@
     padding: 8px;
     position: relative;
     color: white;
-    
+    overflow: hidden;
 }
 
 .leftSidebar-container{
@@ -40,12 +40,12 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    overflow: scroll;
+    overflow: auto !important;
 }
 
 .container{
     flex: 1; 
-    overflow: hidden;
+    //overflow: scroll;
 }
 
 .gutter {
